--- a/ticket-service/src/main/resources/application.properties
+++ b/ticket-service/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.password=test
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:/data.sql
